fix overflow issues

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -44,10 +44,10 @@
       @apply whitespace-nowrap rounded border bg-zinc-200/50 px-1 py-0.5 font-mono text-sm font-medium text-black dark:border-zinc-700 dark:bg-zinc-800/50 dark:text-white;
     }
     pre:has(code) {
-      @apply my-4 max-h-[600px] overflow-auto rounded-lg border p-4 font-mono text-sm font-medium dark:border-zinc-700;
+      @apply my-4 max-h-[600px] max-w-full overflow-auto rounded-lg border p-4 font-mono text-sm font-medium dark:border-zinc-700;
     }
     img {
-      @apply my-4 rounded-lg border dark:border-zinc-700;
+      @apply my-4 max-w-full rounded-lg border dark:border-zinc-700;
     }
     video {
       @apply my-4 rounded-lg border dark:border-zinc-700;
@@ -59,7 +59,7 @@
       @apply text-blue-500 underline;
     }
     table {
-      @apply my-4 w-full table-auto border-collapse text-sm;
+      @apply my-4 w-full max-w-full table-auto border-collapse overflow-x-auto text-sm;
       th {
         @apply border-b p-4 text-left font-medium dark:border-zinc-700;
       }
